--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "PixelJump",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "postinstall": "bower install && grunt build"
   },
   "dependencies": {
     "express": "~4.9.x"
