--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "postinstall": "bower install && grunt build"
   },
   "dependencies": {
-    "express": "~4.9.x"
+    "bower": "^1.3.12",
+    "express": "~4.9.x",
+    "grunt-cli": "^0.1.13"
   },
   "engines": {
     "node": "0.10.x"
