--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "postinstall": "bower install && grunt build"
+    "postinstall": "bower install"
   },
   "dependencies": {
     "bower": "^1.3.12",
